--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,10 @@
+1.19.2-5.5.5:
+
+- update chinese translation (pr #122)
+- fix a crash with binder
+
+
+
 1.19.2-5.5.4:
 
 - fix tool infusion not applying enchantments on certain cases
