--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,8 @@
+1.19.2-5.5.10:
+
+- fix a crash with binder (issue #130)
+
+
 1.19.2-5.5.9:
 
 - fix tool infusion overriding enchantments (issue #124)
@@ -26,7 +31,6 @@
 
 - update chinese translation (pr #122)
 - fix a crash with binder
-
 
 
 1.19.2-5.5.4:
