--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,9 @@
+1.19.2-5.7.2:
+
+- fix element valve and element beam loot tables
+- add large runes to source altar loot table
+
+
 1.19.2-5.7.1:
 
 - added fleeting to artificial key remap
