--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,9 @@
+1.19.2-5.8.1:
+
+- fix a few elementopedia entries
+- fix worldgen getting stuck (issue #142)
+
+
 1.19.2-5.8.0:
 
 - new shrine upgrade: translocation
