--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,10 @@
+1.19.2-5.8.3:
+
+- updated source altar structures
+- fix breeding shrine sync error
+- fix worldgen crash (issue #143)
+
+
 1.19.2-5.8.2:
 
 - fix the air mill grindstone and the wart mill wood saw
