--- a/src/main/resources/assets/elementalcraft/lang/en_us.json
+++ b/src/main/resources/assets/elementalcraft/lang/en_us.json
@@ -622,7 +622,7 @@
   "elementalcraft.page.using_shrines3": "The shrine is running but did not find anything to do",
   "elementalcraft.page.using_shrines4": "The shrine is out of element",
   "elementalcraft.page.firepylon0": "The $(item)Fire Pylon$() is a $(thing)Shrine$() that sets fire to nearby $(thing)creatures$().$(br2)It consumes $(thing)fire element$().",
-  "elementalcraft.page.oreshrine0": "The $(item)Ore Shrine$() excavates $(thing)ores$() underneath it.$(br2)It consumes $(thing)earth element$().",
+  "elementalcraft.page.oreshrine0": "The $(item)Ore Shrine$() excavates $(thing)ores$() underneath it leaving only $(item)stone$() where the $(thing)ore$() was.$(br2)It consumes $(thing)earth element$().",
   "elementalcraft.page.lavashrine0": "The $(item)Lava Shrine$() melts $(item)basalt$() above it into $(item)lava$().$(br2)It consumes $(thing)fire element$().",
   "elementalcraft.page.sweetshrine0": "The $(item)Sweet Shrine$() periodically refills hunger. It can also boost nearby $(thing)bees$() production instead if you upgrade it with a $(l:shrine_upgrades/shrine_upgrade_nectar)Nectar shrine upgrade$().$(br2)It consumes $(thing)water element$().",
   "elementalcraft.page.vacuumshrine0": "The $(item)Vacuum Shrine$() pulls towards itself nearby $(item)items$() and stores them in the container below it.$(br2)It consumes $(thing)air element$().",
@@ -630,7 +630,7 @@
   "elementalcraft.page.harvestshrine0": "The $(item)Harvest Shrine$() harvest $(thing)crops$() below it.$(br2)It consumes $(thing)earth element$().",
   "elementalcraft.page.lumbershrine0": "The $(item)Lumber Shrine$() cut down $(thing)trees() and $(thing)leaves() above and around it.$(br2)It consumes $(thing)earth element$().",
   "elementalcraft.page.overloadshrine0": "The $(item)Overload Shrine$() boost the speed of the $(item)block$() it's facing, it cannot boost other shrines.$(br2)It consumes $(thing)air element$().",
-  "elementalcraft.page.enderlockshrine0": "The $(item)Ender Lock Shrine$() channels $(thing)water$() through the ender matrix preventing anything passing through it.$(br)Near it $(thing)endermen$() can't teleport, $(item)ender pearls$() or $(l:spells/ender_strike)Ender strike$() don't work.$(br2)It consumes $(thing)water element$().",
+  "elementalcraft.page.enderlockshrine0": "The $(item)Ender Lock Shrine$() channels $(thing)water$() through the ender matrix preventing anything passing through it.$(br)Near it $(thing)endermen$() can't teleport, $(item)ender pearls$(), $(item)chorus fruits$() $(l:spells/ender_strike)Ender strike$(), $(l:spells/translocation)translocation$() and other teleportation don't work.$(br2)It consumes $(thing)water element$().",
   "elementalcraft.page.breedingshrine0": "The $(item)Breeding Shrine$() uses $(thing)food$() laying around to breed $(thing)animals$() in range.$(br2)It consumes $(thing)earth element$().",
   "elementalcraft.page.groveshrine0": "The $(item)Wild Grove Shrine$() will create wild $(thing)flowers$() on top of $(item)grass$().$(br2)It consumes $(thing)water element$().",
   "elementalcraft.page.springshrine0": "The $(item)Spring Shrine$() will create a water block on top of it.$(br2)It consumes $(thing)water element$().",
